static/themes/default/style.css
/* ... */
form table.embeddedComponent {
  border-collapse: separate;
}
form .inline-open-add {
  display: inline-block;
  margin-bottom: 1.25rem;
  margin-left: 0;
  margin-top: -1.25rem;
}
form.auth_login #submit_record__row {
  white-space: pre;
}

/* General Widgets */
input[type="text"],
input[type="password"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="month"],
input[type="week"],
input[type="email"],
input[type="number"],
input[type="search"],
input[type="tel"],
input[type="time"],
input[type="url"],
textarea,
select {
  height: 1.75rem;
  padding: 0.25rem;
  margin: 0;
  display: inline-block;
  font-weight: normal;
}

input[type="text"],
input[type="password"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="month"],
input[type="week"],
input[type="email"],
input[type="number"],
input[type="search"],
input[type="tel"],
input[type="time"],
input[type="url"],
select {
  width: auto !important;
}

/* Form and Item containers */
#last_update {
  float: none;
}

.form-container,
.item-container {
  width: auto;
  overflow: inherit;
}
.form-container form,
.item-container form {
  background: #fefefe;
  padding: 5px 10px;
}
.form-container .controls,
.item-container .controls {
  display: inline-block;
}

.form-container form select,
.form-container form input.string:not(.date),
.form-container form textarea {
  margin: 0;
}
.form-container form .ui-multiselect {
  max-width: 100%;
}
.form-container form:not(.filter-form):not(.auth_login):not(.auth_register) input[type="text"]:not(.double):not(.datetimepicker):not(.date):not(.dms-input) {
  width: 20rem !important;
}

.item-container .controls {
  background: #fafafa;
  padding: 0.35rem;
  min-height: 1.7rem;
}

/* Filter forms */
.filter-form table tr,
.filter-form .ui-multiselect {
  max-width: 60%;
}
.filter-form .inline-tooltip {
  padding-top: 0.2rem;
}

/* Login/Registration box */
#login_form,
#register_form,
#login_box {
  clear: none !important;
}

/* Help Popup */
.inline-tooltip {
  display: inline-block;
  vertical-align: top;
  padding-left: 0.75rem;
}
.inline-tooltip .tooltip,
.inline-tooltip .tooltipbody,
.inline-tooltip .stickytip,
.inline-tooltip .ajaxtip {
  display: block;
  margin-top: 10px;
  padding: 0;
  width: 60px;
}

/* Rheader */
#rheader a.th {
  margin-right: 10px;
}
#rheader a.th img {
  height: 60px;
}

/* RHeader Tabs */
div.tabs {
  border-bottom: 1px solid #2ba6cb;
  clear: left;
  height: 2.125em;
  margin: 5px 0 0;
  padding: 0.5em 0;
  text-align: left;
  width: 100%;
  line-height: 1em;
}
div.tabs span {
  float: left;
  border-radius: 3px 3px 0 0;
  padding: 0.15em 6px 0.25em 5px;
}
div.tabs span a {
  color: #ffffff !important;
  text-decoration: none !important;
  background: transparent !important;
}
div.tabs span a:hover {
  background: transparent !important;
}
div.tabs span.tab_here {
  background: #ffffff;
  border-color: #2ba6cb;
  border-style: solid;
  border-width: 2px 2px 0 3px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #ffffff;
  bottom: 0;
  display: inline;
  font-weight: bold;
  margin-right: 5px;
  padding: 0.2em 6px 0.25em 5px;
  position: relative;
}
div.tabs span.tab_here:hover {
  background: #f1edec;
}
div.tabs span.tab_here a {
  color: #666666 !important;
}
div.tabs span.tab_here a:hover {
  color: #666666 !important;
}
div.tabs span.tab_last,
div.tabs span.tab_other {
  font-size: 90%;
  background: #2ba6cb;
  border-color: #2ba6cb;
  border-width: 1px 1px 0 2px;
  border-style: solid;
  margin-right: 3px;
  margin-top: 0.25em;
}
div.tabs span.tab_last:hover,
div.tabs span.tab_other:hover {
  background: #1f7994;
  border-color: #1f7994;
}
div.tabs span.tab_last a,
div.tabs span.tab_other a {
  color: #ffffff !important;
}
div.tabs span.tab_last a:hover,
div.tabs span.tab_other a:hover {
  color: #ffffff !important;
}

/* Action buttons */
.action-btn,
.delete-btn-ajax,
.delete-btn,
.selected-action {
  font-size: 0.6875rem;
  border: 0;
  line-height: 1;
  margin-bottom: inherit;
  padding: 0.25rem 0.5rem 0.375rem;
  cursor: pointer;
  text-decoration: none !important;
  display: inline-block;
}
.action-btn[disabled], .action-btn[disabled]:hover,
.delete-btn-ajax[disabled],
.delete-btn-ajax[disabled]:hover,
.delete-btn[disabled],
.delete-btn[disabled]:hover,
.selected-action[disabled],
.selected-action[disabled]:hover {
  color: #ffffff;
  background-color: #c0c0c0;
}

/* Default action buttons */
.action-btn,
.selected-action {
  background-color: #2ba6cb;
  color: #ffffff !important;
}
.action-btn:hover,
.selected-action:hover {
  background-color: #1f7994;
  color: #ffffff !important;
}

/* Alert-style action buttons (e.g. delete) */
.delete-btn-ajax,
.delete-btn {
  background-color: #c60f13;
  color: #ffffff !important;
}
.delete-btn-ajax:hover,
.delete-btn:hover {
  background-color: #a20c10 !important;
  color: #ffffff !important;
}

/* Action buttons in datatables */
.dataTable .action-btn,
.dataTable .selected-action {
  color: #ffffff;
}
.dataTable .delete-btn,
.dataTable .delete-btn-ajax {
  color: #ffffff;
}
.dataTable td.actions {
  white-space: nowrap;
}

/* Footer */
#footer {
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid #EEEEEE;
}
#footer button.btn {
  font-size: 0.6875rem;
  border: 0;
  line-height: 1;
  margin-bottom: inherit;
  padding: 0.25rem 0.5rem 0.375rem;
  cursor: pointer;
  text-decoration: none !important;
  display: inline-block;
  margin-left: 2px;
  margin-right: 2px;
  color: #ffffff;
  background: #dddddd;
}
#footer button.btn:hover {
  color: #ffffff;
  background: #a0a0a0;
}

/* Menu Logo */
.S3menulogo {
  background: url(../../img/S3menu_logo.png) left top no-repeat;
  text-shadow: none;
  padding: none;
  margin-left: 5px;
  margin-top: 10px;
  width: 35px;
  height: 28px;
  display: inline-block;
}

/* Top bar */
.top-bar {
  color: #ffffff;
  background-color: #333333;
  z-index: 1000;
}
/* ... */

